# cms-automation

./: .env.dev-prod-like.example  .env.example  .env.production.example  .env.supabase  .gitignore  .mcp.json  AGENTS.md  AI_SERVICES_TEST_REPORT.md  API_ENDPOINT_AUDIT_REPORT.md  API_PATH_FIX_DEPLOYMENT_REPORT.md  ARCHITECTURE_INVESTIGATION.md  CHANGELOG.md  CLAUDE.md  CLOUD_DEPLOYMENT_ARCHITECTURE_ANALYSIS.md  CODEX_CLI_IMPLEMENTATION_REPORT.md  CODEX_ISSUES_ANALYSIS.md  COMPLETION_REPORT.md  COMPUTER_USE_GUIDE.md  CONFIGURATION_COMPLETED.md  CONFIGURATION_STATUS_REPORT.md  Computer_Use_重构方案.md  DATABASE_MIGRATION_ANALYSIS_REPORT.md  DATABASE_MIGRATION_REQUIRED.md  DATABASE_TIMEOUT_DIAGNOSIS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_CLOUD.md  DEPLOYMENT_GUIDE_GCP_UNIFIED.md  DEPLOYMENT_READY.md  DEPLOYMENT_SETUP_COMPLETE.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_STATUS_SUMMARY.md  DEPLOYMENT_SUCCESS_REPORT.md  DOCKER_PLATFORM_FIX.md  ENVIRONMENTS.md  ENV_ISSUE_RESOLUTION_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FRONTEND_DEPLOYMENT_OPTIONS.md  GCP_PERMISSION_ISSUE_ANALYSIS.md  GCP_PERMISSION_SUMMARY.md  (+74 more)
backend/: .env.example  .gcloudignore  ARTICLES_ENDPOINT_500_ERROR.md  BACKEND_IMPLEMENTATION_PLAN.md  CLAUDE_4.5_UPGRADE.md  CONFIGURATION_CHECKLIST.md  CONFIGURATION_COMPLETE.md  CONFIGURATION_STATUS_SUMMARY.md  DATABASE_ISSUE_RESOLUTION.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_CHECKLIST.md  DUAL_DETECTION_SYSTEM.md  Dockerfile  Dockerfile.computer-use  Dockerfile.prod  ENV_CLEANUP_GUIDE.md  GOOGLE_DRIVE_FOLDER_INFO.md  GOOGLE_DRIVE_SETUP_QUICKSTART.md  LOCAL_ENVIRONMENT_SETUP.md  MAX_TOKENS_ANALYSIS.md  MIGRATION_EXECUTION_GUIDE.md  MIGRATION_GUIDE.md  MODEL_UPGRADE_RECOMMENDATION.md  PARSING_STUCK_TROUBLESHOOTING_GUIDE.md  PHASE7_DATABASE_MIGRATION_COMPLETE.md  PREPARED_STATEMENTS_SOLUTION_PRD.md  PROOFREADING_BATCH10_COMPLETED.md  PROOFREADING_BATCH9_COMPLETED.md  PROOFREADING_MVP_COMPLETED.md  PROOFREADING_MVP_WITH_TESTS_COMPLETED.md  PROOFREADING_PHASE1_MVP_PLUS_COMPLETED.md  PROOFREADING_PHASE2_EXTENDED_COMPLETED.md  PROOFREADING_PHASE2_P0_COMPLETED.md  PROOFREADING_PHASE2_PARTIAL_COMPLETED.md  PROOFREADING_RULES_FEASIBILITY_ANALYSIS.md  PROOFREADING_SERVICE_STATUS.md  README.md  TAGS_COMPUTER_USE_MVP_COMPLETED.md  TAGS_FEATURE_IMPLEMENTATION_SUMMARY.md  TAGS_FEATURE_MVP_PLAN.md  (+48 more)
backend/docs/: CLAUDE_COMPILER_GUIDE.md  GCP_SECRET_MANAGER_SETUP.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE7_STEP3_UPDATE_SUMMARY.md  PROOFREADING_SERVICE_GUIDE.md  SECURITY_ARCHITECTURE.md  SEMANTIC_SIMILARITY_IMPLEMENTATION.md  SEMANTIC_SIMILARITY_SQL_EXAMPLES.sql  SPECKIT_UPDATE_SUMMARY.md  T7.1_PROOFREADING_DECISIONS_SCHEMA_DESIGN.md  T7.2_PROOFREADING_SERVICE_ARCHITECTURE.md  T7.3.1_RULE_REVIEW_API_DESIGN.md  T7.3.2_RULE_PUBLISHING_IMPLEMENTATION.md  T7.3_PROOFREADING_API_DESIGN.md  article_images_metadata_spec.md  article_import_guide.md  article_proofreading_seo_workflow.md  computer_use_optimization_guide.md  computer_use_publishing_guide.md  database_schema_updates.md  documentation_alignment_checklist.md  documentation_update_summary.md  e2e_test_results.md  final_update_summary.md  google_drive_implementation_summary.md  google_drive_integration_guide.md  google_drive_yaml_format.md  hybrid_publishing_implementation_guide.md  load_test_results.md  optimization_monitoring_guide.md  phase7_e2e_testing_guide.md  phase7_er_diagram.md  phase7_parsing_api.md  phase7_proofreading_integration_analysis.md  phase7_step1_title_optimization_analysis.md  phase7_step3_seo_metadata_analysis.md  phase7_unified_ai_optimization_service.md  phase7_unified_optimization_api_reference.md  playwright_vs_computer_use_guide.md  proofreading_feedback_tuning_plan.md  (+9 more)
backend/examples/: ai_compiler_demo.py  published_rules_example.py  test_claude_compiler.py
backend/migrations/: env.py
backend/scripts/: backfill_word_count.py  check_pipeline_status.sh  cleanup_body_html_metadata.py  create_all_tables.py  create_missing_tables.py  embed_all_articles.py  fix-supabase-pooler.sh  (+18 more)
(+950 files in other folders)
